# tutorial-opentelemetry

./: .env-auto-instrument  app-manual.py  app.py  pyproject.toml
